Fix safe area on iOS

--- a/src/index.css
+++ b/src/index.css
@@ -455,7 +455,7 @@
   }
 
   .safe-area-bottom {
-    padding-bottom: env(safe-area-inset-bottom, 0);
+    padding-bottom: calc(env(safe-area-inset-bottom, 0px) + 8px);
   }
 
   .safe-area-inset {
